--- a/graph.html
+++ b/graph.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html><body>
-<link rel="stylesheet" type="text/css" href="joint.min.css" />
+<link rel="stylesheet" type="text/css" href="lib/joint.min.css" />
 <link rel="stylesheet" type="text/css" href="graph.css" />
 
 
@@ -13,8 +13,8 @@
 </div>
 <div id="paper"></div>
 
-<script type="text/javascript" src="joint.min.js"></script>
-<script type="text/javascript" src="joint.layout.DirectedGraph.min.js"></script>
+<script type="text/javascript" src="lib/joint.min.js"></script>
+<script type="text/javascript" src="lib/joint.layout.DirectedGraph.min.js"></script>
 <script type="text/javascript" src="graph.js"></script>
 
 </body></html>
