--- a/graph.html
+++ b/graph.html
@@ -4,10 +4,9 @@
 <link rel="stylesheet" type="text/css" href="lib/joint.min.css" />
 <link rel="stylesheet" type="text/css" href="graph.css" />
 
-
-<div id="toolbar">
+<div id="controls">
 	<input id="file" type="file" name="file" />
-    <select id="list" size="35">
+    <select id="list" size="2">
     	<option value=-1>No file selected</option>
     </select>
 </div>
