prep for change states

--- a/graph.html
+++ b/graph.html
@@ -4,12 +4,10 @@
 <link rel="stylesheet" type="text/css" href="lib/joint.min.css" />
 <link rel="stylesheet" type="text/css" href="graph.css" />
 
-<div id="controls">
-	<input id="file" type="file" name="file" />
-    <select id="list" size="2">
-    	<option value=-1>No file selected</option>
-    </select>
-</div>
+<input id="file" type="file" name="file" />
+<select id="list" size="2">
+	<option value="-1c-1">No file selected</option>
+</select>
 <div id="paper"></div>
 
 <script type="text/javascript" src="lib/joint.min.js"></script>
