--- a/graph.html
+++ b/graph.html
@@ -12,7 +12,7 @@
 	<select id="mode">
 		<option value="all" selected>View full state</option>
 		<option value="diff">Changes only</option>
-		<!--option value="no-change">Don't display changes</option-->
+		<option value="no-change">Skip changes</option>
 	</select>
 	<input id="zoomnum" type="number" min="10" max="200" step="5" value="50"/>
 </div>
