--- a/graph.html
+++ b/graph.html
@@ -3,8 +3,13 @@
 <html><body>
 <link rel="stylesheet" type="text/css" href="lib/joint.min.css" />
 <link rel="stylesheet" type="text/css" href="graph.css" />
+<link id="csschoice" rel="stylesheet" type="text/css" href="" />
 
 <input id="file" type="file" name="file" />
+<select id="style">
+	<option value="css/colors.css" selected>Simple colors</option>
+	<option value="css/adapton.css">Adapton</option>
+</select>
 <select id="list" size="2">
 	<option value="-1c-1">No file selected</option>
 </select>
