--- a/graph.html
+++ b/graph.html
@@ -7,8 +7,8 @@
 
 <input id="file" type="file" name="file" />
 <select id="style">
-	<option value="css/colors.css" selected>Simple colors</option>
-	<option value="css/adapton.css">Adapton</option>
+	<option value="css/colors.css">Simple colors</option>
+	<option value="css/adapton.css" selected>Adapton</option>
 </select>
 <select id="list" size="2">
 	<option value="-1c-1">No file selected</option>
