finished initial coding of loader

--- a/graph.html
+++ b/graph.html
@@ -7,8 +7,8 @@
 
 <input id="file" type="file" name="file" />
 <select id="style">
-	<option value="css/colors.css" selected>Simple colors</option>
-	<option value="css/adapton.css">Adapton</option>
+	<option value="colors" selected>Simple colors</option>
+	<option value="adapton">Adapton</option>
 </select>
 <select id="list" size="2">
 	<option value="-1c-1">No file selected</option>
@@ -21,7 +21,7 @@
 	</select>
 	<input id="zoomnum" type="number" min="10" max="200" step="5" value="50"/>
 </div>
-<div id="paper"></div>
+<div id="primaryDisplay"></div>
 
 <script type="text/javascript" src="lib/joint.min.js"></script>
 <script type="text/javascript" src="lib/joint.layout.DirectedGraph.min.js"></script>
