--- a/graph.html
+++ b/graph.html
@@ -23,8 +23,8 @@
 </div>
 <div id="primaryDisplay"></div>
 
-<script type="text/javascript" src="lib/joint.min.js"></script>
-<script type="text/javascript" src="lib/joint.layout.DirectedGraph.min.js"></script>
+<script type="text/javascript" src="libsrc/joint.js"></script>
+<script type="text/javascript" src="libsrc/joint.layout.DirectedGraph.js"></script>
 <script type="text/javascript" src="graph.js"></script>
 
 </body></html>
