--- a/graph.html
+++ b/graph.html
@@ -21,10 +21,10 @@
 	</select>
 	<input id="zoomnum" type="number" min="10" max="200" step="5" value="50"/>
 </div>
-<div id="primaryDisplay"></div>
+<div id="mainDisplay"></div>
 
-<script type="text/javascript" src="libsrc/joint.js"></script>
-<script type="text/javascript" src="libsrc/joint.layout.DirectedGraph.js"></script>
+<script type="text/javascript" src="lib/joint.min.js"></script>
+<script type="text/javascript" src="lib/joint.layout.DirectedGraph.min.js"></script>
 <script type="text/javascript" src="graph.js"></script>
 
 </body></html>
