--- a/graph.html
+++ b/graph.html
@@ -13,6 +13,7 @@
 <select id="list" size="2">
 	<option value="-1c-1">No file selected</option>
 </select>
+<div id="infobox"></div>
 <div id="controls">
 	<select id="mode">
 		<option value="all" selected>View full state</option>
