add hash examples and fix names

--- a/graph.html
+++ b/graph.html
@@ -10,8 +10,9 @@
   <div id="initcontrols">
     <input id="file" type="file" name="file" />
     <select id="style">
-    	<option value="colors" selected>Simple colors</option>
-    	<option value="adapton">Adapton</option>
+    	<option value="colors">Simple colors</option>
+      <option value="adapton" selected>Adapton</option>
+      <option value="hashbaltree">HashTree</option>
     </select>
   </div>
   <div id="listpane">
