initial support for on-demand layout

--- a/graph.html
+++ b/graph.html
@@ -14,6 +14,7 @@
       <option value="adapton" selected>Adapton</option>
       <option value="hashbaltree">HashTree</option>
     </select>
+    <button id="dolayout">Layout Now(beta)</button>
   </div>
   <div id="listpane">
     <select id="list" size="2">
